--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "gulp": "^3.9.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "i18n-express": "^1.1.3",
