--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "eth-sig-util": "^1.4.2",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "gulp": "^3.9.1",
